# project_X

./: README.md  main.py  pyproject.toml  test_log.txt
htmlcov/: index.html
src/: banking_operations.py  decorators.py  generators.py  masks.py  processing.py  reader_operations.py  widget.py
tests/: test_banking_operations.py  test_decorators.py  test_generators.py  test_log.txt  test_masks.py  test_processing.py  test_reader_operations.py  test_utils.py  test_widget.py
