[project]
name = "project-x"
version = "0.1.0"
description = ""
authors = [
    {name = "seniorPolina",email = "quewwfy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.int.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
isort = "^6.0.0"

